[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[project]
name = "flake8_routable"
version = "0.1.7"
requires-python = ">=3.13"
dynamic = [ "dependencies" ]

authors = [
  {name = "Routable", email = "info@routable.com"},
]
maintainers = [
  {name = "Routable", email = "info@routable.com"},
]

homepage = "https://routable.com"
repository = "https://github.com/routablehq/flake8-routable"
documentation = "https://notion.so/routable"

[urls]
project = "https://warrenpay.atlassian.net/browse/DEV"

[project.entry-points."flake8.extension"]
ROU = "flake8_routable:Plugin"

[tool.black]
line-length = 120
target-version = [ "py313" ]

[tool.isort]
atomic = true
case_sensitive = true
filter_files = true
import_heading_firstparty = "Internal imports"
import_heading_stdlib = "Python imports"
import_heading_thirdparty = "Pip imports"
line_length = 120
lines_after_imports = 2
profile = "black"
py_version = "auto"
remove_redundant_aliases = true
sections = [
  "FUTURE",
  "STARTUP",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]

[tool.poetry.dependencies]
flake8 = "*"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^6.1.0"
pre-commit = "^4.3.0"
pydocstyle = "^6.3.0"
pyupgrade = "^3.20.0"
pytest = "^9.0.2"
pytest-cov = "^6.2.1"

[tool.pydocstyle]
ignore = [
  "D1",
  "D202",
  "D203",
  "D205",
  "D212",
  "D400",
  "D401",
  "D404",
  "D406",
  "D407",
  "D413",
  "D415",
]
inherit = false

[tool.pytest.ini_options]
# Line 1: Flag test warnings to fail
# Line 2+: Warnings we want to ignore in the format of
#  - ignore::PackageSpecificWarning
#  - ignore:match:GlobalWarning
# We never add top level types like `ignore::Warning` or `ignore::UserWarning`
filterwarnings = [
  "error",
]
junit_family = "legacy"
log_cli = false
log_cli_level = "WARN"
python_files = 'test*.py'
